app.css
/* ... */
  
  @media (max-width: 340px) {
    .skills-img {
      block-size: 55px;
      inline-size: 55px;
    }
  }
  
  /* ------------------ */
  /* ----- Footer ----- */
  /* ------------------ */
  
  .footer {
    border-top: 1px solid var(--border);
    padding-block: var(--gutter-x-small);
  }
  
  .footer-content {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: var(--gutter-large);
  }
  
  @media (max-width: 875px) {
    .footer-content {
      flex-direction: column-reverse;
      gap: var(--gutter-large);
      text-align: center;
    }
  }
  
  .footer-text {
    font-size: var(--text-large);
    text-align: center;
  }
  
  .footer-text a {
    color: var(--sub);
  }
  
  .footer-links {
    display: flex;
    justify-content: center;
    gap: var(--gutter-large);
    list-style-type: none;
    padding: 0;
    margin: 0 auto;
  }

  @media (max-width: 1040px) {
    .footer-links {
      gap: var(--gutter-large);
    }
  }
  
  .footer-link img {
    block-size: 50px;
    inline-size: 50px;
    display: block;
  }
  
  .footer-link a {
    opacity: 0.875;
    transition: 225ms ease-in opacity;
  }
  
  .footer-link a:hover {
    opacity: 1;
  }
  
  body .footer-link img {
    filter: invert(1);
  }
  
  input:checked {
    --thumb-position: 100%;
    background-color: var(--track-active);
  }
  address{
    text-align: center;
}

